# BankOCR-Refactoring-Kata

./: .gitignore  Readme.md
.github/workflows/: c.yml  cpp.yml  io.yml  java.yml  javascript.yml  kotlin.yml  php.yml  typescript.yml
c/: .gitignore  Ocr.c  Ocr.h  OcrTest.c
cpp/: .gitignore  CMakeLists.txt  Ocr.cpp  Ocr.h  ocr_gtest.cpp
io/: .gitignore  package.json
io/io/: Ocr.io
io/tests/correctness/: OcrTest.io  run.io
java/: .gitignore  build.gradle  pom.xml  settings.gradle
java/src/test/java/: OcrTest.java
javascript/: .gitignore  jest.config.js  package.json
javascript/src/: ocr.js
javascript/tests/: ocr.spec.js
kotlin/: build.gradle  settings.gradle
kotlin/src/main/kotlin/: Ocr.kt
kotlin/src/test/kotlin/: OcrTest.kt
php/: composer.json
php/src/: Ocr.php
php/test/: OcrTest.php
src/: DataUtils.java  Ocr.java  OcrTest.java  intro.txt  maitria.txt  principles.txt  problem.txt
typescript/: package.json
typescript/src/: ocr.ts
typescript/tests/: ocr.spec.ts
